New data processing and removed some hparameters in HAG

--- a/1.general_framework.ipynb
+++ b/1.general_framework.ipynb
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc3488bf-2624-44aa-9ca4-7d96c975c392",
+   "id": "8ce8ea82-6c39-45d7-a3b9-04b11f7bfea5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,36 +216,93 @@
     "    if is_multivariate==False:\n",
     "        raise ValueError(\"Cannot use spectral representation if it's not multivariate !\")\n",
     "\n",
+    "#  hop used to be  hop=100 and win_length = 50, which was wrong\n",
+    "hop = 50 if is_instances_classification else 1\n",
+    "win_length = edge_cut = 100\n",
     "if not is_multivariate:\n",
     "    print(f\"Converting single variate to {spectral_representation}\")\n",
     "    X_train_band = generate_multivariate_dataset(\n",
-    "        X_train, sampling_rate, is_instances_classification, peak_freqs, spectral_representation, hop=100\n",
+    "        X_train, is_instances_classification, spectral_representation, hop=hop, win_length = win_length\n",
     "    )\n",
     "    if use_cross_validation:\n",
     "        X_val_band = generate_multivariate_dataset(\n",
-    "            X_val, sampling_rate, is_instances_classification, peak_freqs, spectral_representation, hop=100\n",
+    "            X_val, is_instances_classification, spectral_representation, hop=hop, win_length = win_length\n",
     "        )\n",
     "    X_test_band = generate_multivariate_dataset(\n",
-    "            X_test, sampling_rate, is_instances_classification, peak_freqs, spectral_representation, hop=100\n",
+    "            X_test, is_instances_classification, spectral_representation, hop=hop, win_length = win_length\n",
     "    )\n",
     "        \n",
     "elif is_multivariate and not use_spectral_representation:\n",
     "    print(f\"Converting multivariate to {spectral_representation}\") # if None we convert to temporal\n",
     "    X_train_band = generate_multivariate_dataset(\n",
-    "        X_train_band, sampling_rate, is_instances_classification, peak_freqs, spectral_representation, hop=100\n",
+    "        X_train_band, is_instances_classification, spectral_representation, hop=hop, win_length = win_length\n",
     "    )\n",
     "    if use_cross_validation:\n",
     "        X_val_band = generate_multivariate_dataset(\n",
-    "            X_val_band, sampling_rate, is_instances_classification, peak_freqs, spectral_representation, hop=100\n",
+    "            X_val_band, is_instances_classification, spectral_representation, hop=hop, win_length = win_length\n",
     "        )\n",
     "    X_test_band = generate_multivariate_dataset(\n",
-    "        X_test_band, sampling_rate, is_instances_classification, peak_freqs, spectral_representation, hop=100\n",
+    "        X_test_band, is_instances_classification, spectral_representation, hop=hop, win_length = win_length\n",
     "    )\n",
     "else:\n",
     "    print(\"Data is already spectral, nothing to do\")\n",
     "\n",
-    "if spectral_representation is not None:\n",
-    "    use_spectral_representation = True"
+    "if not is_instances_classification:\n",
+    "    X_train_band = X_train_band[edge_cut:-edge_cut] \n",
+    "    X_test_band = X_test_band[edge_cut:-edge_cut] \n",
+    "    \n",
+    "    Y_train = Y_train[edge_cut:-edge_cut] \n",
+    "    Y_test  = Y_test[edge_cut:-edge_cut]"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "7deb5b39-b2cf-471c-aa5a-ad2abcfe96fc",
+   "metadata": {},
+   "source": [
+    "import numpy as np\n",
+    "from scipy.signal import ShortTimeFFT\n",
+    "from scipy.signal.windows import hann\n",
+    "\n",
+    "def generate_multivariate_dataset(X, nperseg=32, fs=1.0, trim_edges=True):\n",
+    "    # Adjust nperseg if necessary\n",
+    "    if len(X) < nperseg:\n",
+    "        print(f\"Adjusting nperseg from {nperseg} to {len(X)} due to short input length.\")\n",
+    "        nperseg = len(X)\n",
+    "    # For maximum overlap (hop=1), we set hop to 1.\n",
+    "    hop = 1\n",
+    "    print(\"Using window length (nperseg):\", nperseg, \"and hop:\", hop)\n",
+    "    \n",
+    "    # Create a Hann window of length nperseg.\n",
+    "    win = hann(nperseg, sym=True)\n",
+    "    \n",
+    "    # Instantiate ShortTimeFFT. Here, mfft is left as None so the FFT length equals the window length.\n",
+    "    sft = ShortTimeFFT(win, hop, fs, scale_to='magnitude')\n",
+    "    \n",
+    "    # Compute the STFT. The stft method supports a 'padding' parameter.\n",
+    "    # Here, padding=True pads the signal to reduce boundary effects.\n",
+    "    S = sft.stft(X, padding=\"zeros\")\n",
+    "    \n",
+    "    # S has shape (n_freq, n_time). Taking the magnitude and transposing gives:\n",
+    "    X_band = np.abs(S).T  # Shape: (n_time, n_freq)\n",
+    "    \n",
+    "    # Optionally remove edge timesteps that may be affected by padding.\n",
+    "    edge_cut = 0\n",
+    "    if trim_edges:\n",
+    "        edge_cut = nperseg * 2  # Remove nperseg timesteps from both start and end.\n",
+    "        print(f\"Trimming the first and last {edge_cut} timesteps from the dataset.\")\n",
+    "        X_band = X_band[edge_cut:-edge_cut, :]\n",
+    "    \n",
+    "    return X_band, edge_cut\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Generate the multivariate dataset (frequency bands)\n",
+    "X_train_band, edge_cut = generate_multivariate_dataset(X_train, nperseg=32, trim_edges=True)\n",
+    "X_test_band, _ = generate_multivariate_dataset(X_test, nperseg=32, trim_edges=True)\n",
+    "\n",
+    "Y_train_trimmed = X_train[edge_cut:-edge_cut] \n",
+    "Y_test_trimmed  = X_test[edge_cut:-edge_cut]"
    ]
   },
   {
@@ -299,20 +356,24 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "53edf7c4-a4c4-45b8-acdc-00e61e73c32a",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17fe7deb-cb87-4a1b-b171-3adeab53f233",
    "metadata": {},
+   "outputs": [],
    "source": [
     "\n",
     "# Define the range around the merge point to plot\n",
     "start_index = 0\n",
-    "end_index = 3000\n",
+    "end_index = 500\n",
+    "\n",
+    "sample = X_train_band if not is_instances_classification else X_train_band[0]\n",
     "\n",
     "# Plot for a subset N features within a range arround transition from train to test\n",
     "N = 3\n",
     "plt.figure(figsize=(16, 5))\n",
-    "for i in [1, 2, 17]: \n",
-    "    plt.plot(range(start_index, end_index), X_train_band[start_index:end_index, i], label=f'Feature {i}')\n",
+    "for i in [1, 5, 14]: \n",
+    "    plt.plot(range(start_index, end_index), X_train[0][start_index:end_index, 0], label=f'Feature {i}')\n",
     "plt.title('Feature Values Around Merge Point')\n",
     "plt.xlabel('Sample Index')\n",
     "plt.ylabel('Feature Value')\n",
@@ -321,30 +382,33 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "6eecde7e-5702-45b7-9691-f8134fe90ccc",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b1d88cf-a9a8-4e17-bffb-262aaffcf605",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# Concatenate train and test arrays for plotting\n",
-    "combined_data = np.concatenate((X_train_band, X_val_band), axis=0)\n",
-    "\n",
-    "# Calculate the merge point index\n",
-    "merge_point_index = X_train_band.shape[0]\n",
-    "\n",
-    "# Define the range around the merge point to plot\n",
-    "start_index = merge_point_index - 1000\n",
-    "end_index = merge_point_index + 2000\n",
-    "\n",
-    "# Plot for a subset N features within a range arround transition from train to test\n",
-    "N = 3\n",
-    "plt.figure(figsize=(16, 5))\n",
-    "for i in [1, 2, 17]: \n",
-    "    plt.plot(range(start_index, end_index), combined_data[start_index:end_index, i], label=f'Feature {i}')\n",
-    "plt.title('Feature Values Around Merge Point')\n",
-    "plt.xlabel('Sample Index')\n",
-    "plt.ylabel('Feature Value')\n",
-    "plt.legend()\n",
-    "plt.show()"
+    "if use_cross_validation: \n",
+    "    # Concatenate train and test arrays for plotting\n",
+    "    combined_data = np.concatenate((X_train_band, X_val_band), axis=0)\n",
+    "    \n",
+    "    # Calculate the merge point index\n",
+    "    merge_point_index = X_train_band.shape[0]\n",
+    "    \n",
+    "    # Define the range around the merge point to plot\n",
+    "    start_index = merge_point_index - 1000\n",
+    "    end_index = merge_point_index + 2000\n",
+    "    \n",
+    "    # Plot for a subset N features within a range arround transition from train to test\n",
+    "    N = 3\n",
+    "    plt.figure(figsize=(16, 5))\n",
+    "    for i in [1, 2, 17]: \n",
+    "        plt.plot(range(start_index, end_index), combined_data[start_index:end_index, i], label=f'Feature {i}')\n",
+    "    plt.title('Feature Values Around Merge Point')\n",
+    "    plt.xlabel('Sample Index')\n",
+    "    plt.ylabel('Feature Value')\n",
+    "    plt.legend()\n",
+    "    plt.show()"
    ]
   },
   {
@@ -794,10 +858,7 @@
     "\n",
     "if not is_instances_classification:\n",
     "    use_full_instance = None\n",
-    "\n",
-    "if function_name in [\"hadsp\", \"desp\"]:\n",
-    "    max_increment_span = int(max_window_size) if int(max_window_size) - 100 < 0 else int(max_window_size) - 100\n",
-    "    MAX_TIME_INCREMENT = time_increment + time_increment_span #int(max_window_size) or None or TIME_INCREMENT\n"
+    "\n"
    ]
   },
   {
@@ -838,15 +899,17 @@
     "    Win *= input_scaling\n",
     "\n",
     "    if function_name == \"hadsp\":\n",
-    "        W, (state_history, delta_z_history, W_history) = run_algorithm(W, Win, bias, leaky_rate, activation_function, training_set, time_increment, weight_increment,\n",
-    "                                target_rate, rate_spread, function_name, is_instance=is_instances_classification, use_full_instance = use_full_instance, \n",
-    "                                max_increment=MAX_TIME_INCREMENT, max_partners=max_partners, method = \"pearson\", \n",
+    "        W, (state_history, delta_z_history, W_history) = run_algorithm(W, Win, bias, leaky_rate, activation_function, training_set, \n",
+    "                                weight_increment, target_rate, rate_spread, function_name, \n",
+    "                                multiple_instances=is_instances_classification, min_increment = min_increment, max_increment=max_increment, use_full_instance = use_full_instance, \n",
+    "                                max_partners=np.inf, method = \"pearson\", \n",
     "                                n_jobs = 12, visualize=False, record_history=True)\n",
     "\n",
     "    elif function_name == \"desp\":\n",
-    "        W, (state_history, delta_z_history, W_history) = run_algorithm(W, Win, bias, leaky_rate, activation_function, training_set, time_increment, weight_increment,\n",
-    "                            min_variance, variance_spread, function_name, is_instance=is_instances_classification, use_full_instance = use_full_instance, \n",
-    "                            max_increment=MAX_TIME_INCREMENT, max_partners=max_partners, method = \"pearson\", \n",
+    "        W, (state_history, delta_z_history, W_history) = run_algorithm(W, Win, bias, leaky_rate, activation_function, training_set, \n",
+    "                            weight_increment, min_variance, variance_spread, function_name, \n",
+    "                            multiple_instances=is_instances_classification, min_increment = min_increment, max_increment=max_increment, use_full_instance = use_full_instance, \n",
+    "                            max_partners=np.inf, method = \"pearson\", \n",
     "                            intrinsic_saturation=intrinsic_saturation, intrinsic_coef=intrinsic_coef, n_jobs = 12, visualize=False, record_history=True)\n",
     "    else:\n",
     "        raise ValueError(f\"Invalid function_name: {function_name}, should be 'hadsp' or 'desp'\")\n",
@@ -1036,7 +1099,7 @@
     "colors = color_palette(\"tab20\")\n",
     "# NUMBER_OF_STEP_TO_WATCH \n",
     "WATCH_FROM = 0\n",
-    "WATCH_TO = 10000\n",
+    "WATCH_TO = 100000\n",
     "neurons_evolution = np.array(state_history_hag)[WATCH_FROM:WATCH_TO]\n",
     "x =range(len(state_history_hag))[WATCH_FROM:WATCH_TO]\n",
     "j = 0\n",
@@ -1075,8 +1138,8 @@
    "outputs": [],
    "source": [
     "from analysis.richness import pearson, distance_correlation\n",
-    "num_windows = 150\n",
-    "size_window = 500\n"
+    "num_windows = 1500\n",
+    "size_window = 100\n"
    ]
   },
   {
