--- a/2.hyperparameter optimisation.ipynb
+++ b/2.hyperparameter optimisation.ipynb
@@ -76,7 +76,7 @@
    "source": [
     "from datasets.load_data import load_data as load_dataset\n",
     "step_ahead=5\n",
-    "dataset_name = \"FSDD\"\n",
+    "dataset_name = \"JapaneseVowels\"\n",
     "\n",
     "(is_instances_classification, is_multivariate, sampling_rate,\n",
     "     X_train_raw, X_test_raw, Y_train_raw, Y_test,\n",
@@ -192,9 +192,9 @@
     "for i, (train_index, val_index) in enumerate(splits):\n",
     "    x_train = flexible_indexing(X_train_raw, train_index)\n",
     "    x_val = flexible_indexing(X_train_raw, val_index)\n",
-    "    Y_train.append(flexible_indexing(Y_train_raw, train_index))\n",
-    "    Y_val.append(flexible_indexing(Y_train_raw, val_index))\n",
     "\n",
+    "    y_train = flexible_indexing(Y_train_raw, train_index)\n",
+    "    y_val = flexible_indexing(Y_train_raw, val_index)\n",
     "\n",
     "    if is_multivariate:\n",
     "        x_train_band, x_val_band = x_train, x_val\n",
@@ -210,22 +210,35 @@
     "        if is_multivariate==False:\n",
     "            raise ValueError(\"Cannot use spectral representation if it's not multivariate !\")\n",
     "\n",
+    "    hop = 50 if is_instances_classification else 1\n",
+    "    win_length = edge_cut = 100\n",
     "    if not is_multivariate:\n",
     "        x_train_band = generate_multivariate_dataset(\n",
-    "            x_train, sampling_rate, is_instances_classification, peak_freqs, spectral_representation, hop=100\n",
+    "            x_train, is_instances_classification, spectral_representation, hop=hop, win_length = win_length\n",
     "        )\n",
     "        x_val_band = generate_multivariate_dataset(\n",
-    "            x_val, sampling_rate, is_instances_classification, peak_freqs, spectral_representation, hop=100\n",
+    "            x_val, is_instances_classification, spectral_representation, hop=hop, win_length = win_length\n",
     "        )\n",
     "    elif is_multivariate and not use_spectral_representation:\n",
     "        x_train_band = generate_multivariate_dataset(\n",
-    "            x_train_band, sampling_rate, is_instances_classification, peak_freqs, spectral_representation, hop=100\n",
+    "            x_train_band, is_instances_classification, spectral_representation, hop=hop, win_length = win_length\n",
     "        )\n",
     "        x_val_band = generate_multivariate_dataset(\n",
-    "            x_val_band, sampling_rate, is_instances_classification, peak_freqs, spectral_representation, hop=100\n",
+    "            x_val_band, is_instances_classification, spectral_representation, hop=hop, win_length = win_length\n",
     "        )\n",
     "    else:\n",
     "        print(\"Data is already spectral, nothing to do\")\n",
+    "\n",
+    "\n",
+    "    if not is_instances_classification:\n",
+    "        x_train_band = x_train_band[edge_cut:-edge_cut] \n",
+    "        x_val_band = x_val_band[edge_cut:-edge_cut] \n",
+    "        \n",
+    "        y_train = y_train[edge_cut:-edge_cut] \n",
+    "        y_val  = y_val[edge_cut:-edge_cut]\n",
+    "\n",
+    "    Y_train.append(y_train)\n",
+    "    Y_val.append(y_val)\n",
     "\n",
     "    if not is_multivariate:\n",
     "        scaler_x_uni = MinMaxScaler(feature_range=(0, 1))\n",
@@ -243,29 +256,31 @@
     "        if is_instances_classification:\n",
     "            # UNI\n",
     "            if not is_multivariate:\n",
-    "                x_train_noisy=[add_noise(instance, noise_std) for instance in x_train]\n",
+    "                x_train_noisy = [add_noise(instance, noise_std) for instance in x_train]\n",
     "                X_train_noisy.append([add_noise(instance, noise_std) for instance in x_train])\n",
     "                X_val_noisy.append([add_noise(instance, noise_std) for instance in x_val])\n",
-    "                \n",
+    "\n",
     "            # MULTI\n",
-    "            x_train_band_noisy=[add_noise(instance, noise_std) for instance in x_train_band]\n",
+    "            x_train_band_noisy = [add_noise(instance, noise_std) for instance in x_train_band]\n",
     "            X_train_band_noisy.append(x_train_band_noisy)\n",
     "            X_val_band_noisy.append([add_noise(instance, noise_std) for instance in x_val_band])\n",
-    "        \n",
-    "        else:  #if prediction\n",
+    "\n",
+    "        else:  # if prediction\n",
     "            # UNI\n",
     "            if not is_multivariate:\n",
-    "                x_train_noisy=add_noise(x_train, noise_std)\n",
+    "                x_train_noisy = add_noise(x_train, noise_std)\n",
     "                X_train_noisy.append(x_train_noisy)\n",
     "                X_val_noisy.append(add_noise(x_val, noise_std))\n",
-    "        \n",
+    "\n",
     "            # MULTI\n",
-    "            x_train_band_noisy=add_noise(x_train_band, noise_std)\n",
+    "            x_train_band_noisy = add_noise(x_train_band, noise_std)\n",
     "            X_train_band_noisy.append(x_train_band_noisy)\n",
     "            X_val_band_noisy.append(add_noise(x_val_band, noise_std))\n",
     "\n",
+    "\n",
     "    # Define the number of instances you want to select\n",
-    "    x_size = len(x_train_band) if is_multivariate else len(x_train)\n",
+    "\n",
+    "    x_size = len(x_train_band)\n",
     "    num_samples_for_pretrain = 500 if x_size >= 500 else x_size\n",
     "    if is_instances_classification:\n",
     "        indices = np.random.choice(x_size, num_samples_for_pretrain, replace=False)\n",
@@ -282,6 +297,16 @@
     "    if not is_multivariate:\n",
     "        X_pretrain.append(np.array(x_train, dtype=object)[indices].flatten())\n",
     "    X_pretrain_band.append(np.array(x_train_band, dtype=object)[indices])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86d1bcf2-55a5-49a1-aad6-248f5eba456c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_instance_length = max(len(instance) for fold in X_train_band for instance in fold)"
    ]
   },
   {
@@ -355,7 +380,7 @@
     "RESERVOIR_SIZE = 500\n",
     "\n",
     "nb_jobs_per_trial = 1\n",
-    "function_name = \"anti_oja_fast\" # \"desp\" ou \"hadsp\", \"random_ee\", \"random_ei\", \"ip\", \"ip_correct\" or \"anti_oja_fast\"\n",
+    "function_name = \"anti-oja_fast\" # \"desp\" ou \"hadsp\", \"random_ee\", \"random_ei\", \"ip\", \"ip_correct\" or \"anti-oja_fast\"\n",
     "variate_type = \"multi\" # \"multi\" ou \"uni\"\n",
     "if variate_type == \"uni\" and is_multivariate:\n",
     "    raise ValueError(f\"Invalid variable type: {variate_type}\")\n",
@@ -371,9 +396,6 @@
     "    bias_scaling = trial.suggest_float('bias_scaling', 0, 0.2, step=0.005)\n",
     "    leaky_rate = trial.suggest_float('leaky_rate', 1, 1)\n",
     "    input_connectivity = trial.suggest_float('input_connectivity', 1, 1)\n",
-    "\n",
-    "    min_window_size = sampling_rate / np.max(np.hstack(peak_freqs))\n",
-    "    max_window_size = sampling_rate / np.min(np.hstack(peak_freqs))\n",
     "\n",
     "    # HADSP\n",
     "    if function_name == \"hadsp\":\n",
@@ -404,7 +426,7 @@
     "    if function_name in [\"hadsp\", \"desp\"]:\n",
     "        connectivity = trial.suggest_float('connectivity', 0, 0)\n",
     "        weight_increment = trial.suggest_float('weight_increment', 0.001, 0.1, step=0.001)\n",
-    "        max_partners = trial.suggest_int('max_partners', 10, 20)\n",
+    "        max_partners =  np.inf # trial.suggest_int('max_partners', np.inf, np.inf)\n",
     "        if is_instances_classification:\n",
     "            use_full_instance = trial.suggest_categorical('use_full_instance', [True, False])\n",
     "        else:\n",
@@ -418,6 +440,10 @@
     "    # CROSS-VALIDATION METHODS\n",
     "    total_score = 0\n",
     "    for i in range(nb_splits):\n",
+    "        pretrain_data = X_pretrain_band[i]\n",
+    "        train_data = X_train_band[i]  # X_train_band_noisy_duplicated or X_train_band_duplicated\n",
+    "        val_data = X_val_band_noisy[i] if data_type == \"noisy\" else X_val_band[i]\n",
+    "\n",
     "        common_index = 1\n",
     "        if is_instances_classification:\n",
     "            common_size = X_train_band[i][0].shape[common_index]\n",
@@ -427,10 +453,6 @@
     "        # We want the size of the reservoir to be at least network_size\n",
     "        K = math.ceil(network_size / common_size)\n",
     "        n = common_size * K\n",
-    "\n",
-    "        pretrain_data = X_pretrain_band[i]\n",
-    "        train_data = X_train_band[i]  # X_train_band_noisy_duplicated or X_train_band_duplicated\n",
-    "        val_data = X_val_band_noisy[i] if data_type == \"noisy\" else X_val_band[i]\n",
     "\n",
     "        # INITIALISATION AND UNSUPERVISED PRETRAINING\n",
     "        if function_name == \"random_ee\":\n",
@@ -509,7 +531,7 @@
     "            Y_pred = predict_model_for_classification(reservoir, readout, val_data, n_jobs=nb_jobs_per_trial, mode=mode)\n",
     "            score = compute_score(Y_pred, Y_val[i], is_instances_classification)\n",
     "        else:\n",
-    "            esn = train_model_for_prediction(reservoir, readout, train_data, Y_train[i])\n",
+    "            esn = train_model_for_prediction(reservoir, readout, train_data, Y_train[i], n_jobs=nb_jobs_per_trial)\n",
     "\n",
     "            Y_pred = esn.run(val_data, reset=False)\n",
     "            score = compute_score(Y_pred, Y_val[i], is_instances_classification)\n",
@@ -532,7 +554,7 @@
     "from optuna.samplers import TPESampler\n",
     "from performances.utility import camel_to_snake\n",
     "\n",
-    "url= \"sqlite:///tpe_\" + camel_to_snake(dataset_name) + \"_db.sqlite3\"\n",
+    "url= \"sqlite:///new_tpe_\" + camel_to_snake(dataset_name) + \"_db.sqlite3\"\n",
     "print(url)\n",
     "\n",
     "study_name = function_name + \"_\" + dataset_name + \"_\" + data_type + \"_\" + variate_type\n",
@@ -555,21 +577,13 @@
     "trials_per_process = N_TRIALS // n_parallel_studies\n",
     "\n",
     "# Use joblib to parallelize the optimization\n",
-    "Parallel(n_jobs=n_parallel_studies)(\n",
-    "    delayed(optimize_study)(trials_per_process) for _ in range(n_parallel_studies)\n",
-    ")\n",
+    "#Parallel(n_jobs=n_parallel_studies)(\n",
+    "#    delayed(optimize_study)(trials_per_process) for _ in range(n_parallel_studies)\n",
+    "#)\n",
     "\n",
-    "#study = optuna.create_study(storage=storage, sampler=sampler, study_name=study_name, direction=direction, load_if_exists=True)\n",
-    "#study.optimize(objective, n_trials=N_TRIALS)"
+    "study = optuna.create_study(storage=storage, sampler=sampler, study_name=study_name, direction=direction, load_if_exists=True)\n",
+    "study.optimize(objective, n_trials=N_TRIALS)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "97544f28-0c1a-431a-aa3c-fada8bd1f6b1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -602,8 +616,8 @@
     "columns = ['Dataset', 'Function', 'Average Score', 'Standard Deviation', 'Date']\n",
     "variate_type = \"multi\"  # \"multi\" or \"uni\"\n",
     "\n",
-    "for dataset_name in [\"CatsDogs\", \"JapaneseVowels\", \"SpokenArabicDigits\", \"FSDD\", \"SPEECHCOMMANDS\", \"MackeyGlass\", \"Lorenz\", \"Sunspot_daily\"]:\n",
-    "    for function_name in [\"random_ee\", \"random_ei\", \"ip_correct\", \"anti-oja_fast\",  \"ip-anti-oja_fast\", \"hadsp\", \"desp\"]: # \"random_ee\", \"random_ei\", \"ip_correct\", \"anti-oja_fast\",  \"ip-anti-oja_fast\", \"hadsp\", \"desp\"\n",
+    "for dataset_name in [\"CatsDogs\"]:\n",
+    "    for function_name in [\"random_ee\", \"random_ei\", \"ip_correct\", \"anti-oja_fast\",  \"ip-anti-oja_fast\",  \"hadsp\", \"desp\"]: # \"random_ee\", \"random_ei\", \"ip_correct\", \"anti-oja_fast\",  \"ip-anti-oja_fast\", \"hadsp\", \"desp\"\n",
     "        is_multivariate = True\n",
     "        study = retrieve_best_model(function_name, dataset_name, is_multivariate, variate_type = \"multi\", data_type = \"normal\")\n",
     "        # get the best trial score and print it\n",
