--- a/3.test performances.ipynb
+++ b/3.test performances.ipynb
@@ -139,26 +139,35 @@
     "    freq_train_data = X_train_band if is_multivariate else X_train\n",
     "    flat_train_data = np.concatenate(freq_train_data, axis=0) if is_instances_classification else freq_train_data\n",
     "    peak_freqs = extract_peak_frequencies(flat_train_data, sampling_rate, smooth=True, window_length=WINDOW_LENGTH, threshold=1e-5, nperseg=1024, visualize=False)\n",
-    "    \n",
-    "    \n",
+    "\n",
+    "    hop = 50 if is_instances_classification else 1\n",
+    "    win_length = edge_cut = 100\n",
     "    if not is_multivariate:\n",
     "        X_train_band = generate_multivariate_dataset(\n",
-    "            X_train, sampling_rate, is_instances_classification, peak_freqs, spectral_representation, hop=100\n",
+    "            X_train, is_instances_classification, spectral_representation, hop=hop, win_length = win_length\n",
     "        )\n",
     "        \n",
     "        X_test_band = generate_multivariate_dataset(\n",
-    "            X_test, sampling_rate, is_instances_classification, peak_freqs, spectral_representation, hop=100\n",
+    "            X_test, is_instances_classification, spectral_representation, hop=hop, win_length = win_length\n",
     "        )\n",
     "    elif not use_spectral_representation:\n",
     "        X_train_band = generate_multivariate_dataset(\n",
-    "            X_train_band, sampling_rate, is_instances_classification, peak_freqs, spectral_representation, hop=100\n",
+    "            X_train_band, is_instances_classification, spectral_representation, hop=hop, win_length = win_length\n",
     "        )\n",
     "        X_test_band = generate_multivariate_dataset(\n",
-    "            X_test_band, sampling_rate, is_instances_classification, peak_freqs, spectral_representation, hop=100\n",
+    "            X_test_band, is_instances_classification, spectral_representation, hop=hop, win_length = win_length\n",
     "        )\n",
     "    else:\n",
     "        print(\"Data is already spectral and multivariate, nothing to do\")\n",
+    "\n",
     "        \n",
+    "    if not is_instances_classification:\n",
+    "        X_train_band = X_train_band[edge_cut:-edge_cut] \n",
+    "        X_test_band = X_test_band[edge_cut:-edge_cut] \n",
+    "        \n",
+    "        Y_train = Y_train[edge_cut:-edge_cut] \n",
+    "        Y_test  = Y_test[edge_cut:-edge_cut]\n",
+    "    \n",
     "    scaler_multi = MinMaxScaler(feature_range=(0, 1))\n",
     "    X_train_band, X_val_band, X_test_band = scale_data(X_train_band, X_val_band, X_test_band, scaler_multi, is_instances_classification)\n",
     "                \n",
@@ -189,12 +198,11 @@
     "            X_test_band_noisy = add_noise(X_test_band, noise_std)\n",
     "    \n",
     "    # Define the number of instances you want to select\n",
-    "    x_size = len(X_train_band) if is_multivariate else len(X_train)\n",
-    "    num_samples_for_pretrain = 500 if x_size >= 500 else x_size\n",
     "    if is_instances_classification:\n",
-    "        indices = np.random.choice(x_size, num_samples_for_pretrain, replace=False)\n",
+    "        num_samples_for_pretrain = 500 if len(X_train_band) >= 500 else len(X_train_band)\n",
+    "        indices = np.random.choice(len(X_train_band), num_samples_for_pretrain, replace=False)\n",
     "    else:\n",
-    "        indices = range(x_size)\n",
+    "        indices = range(len(X_train_band))\n",
     "    \n",
     "    \n",
     "    if data_type == \"noisy\":\n",
@@ -218,6 +226,30 @@
    },
    "source": [
     "# Dataset characteristics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18ac2247-a66c-425d-a5e1-561398f350b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datasets = [\n",
+    "    \"CatsDogs\", \"FSDD\", \"JapaneseVowels\", \"SPEECHCOMMANDS\", \"SpokenArabicDigits\"\n",
+    "]\n",
+    "\n",
+    "for dataset_name in datasets:\n",
+    "    (is_instances_classification, is_multivariate, sampling_rate,\n",
+    "     X_train_raw, X_test_raw, Y_train_raw, Y_test,\n",
+    "     use_spectral_representation, spectral_representation,\n",
+    "     groups) = load_dataset(dataset_name, 5, visualize=False)\n",
+    "    \n",
+    "    # Compute the length of each instance (assuming each instance is a 1D sequence)\n",
+    "    lengths = [len(x) for x in X_train_raw]\n",
+    "    avg_length = sum(lengths) / len(lengths)\n",
+    "    \n",
+    "    print(f\"Dataset: {dataset_name}  -->  Average length of X_train_raw: {avg_length:.2f}\")"
    ]
   },
   {
@@ -379,7 +411,7 @@
     "    RIDGE_COEF = 10**hyperparams['ridge']\n",
     "    \n",
     "    if function_name in [\"hadsp\", \"desp\"]:\n",
-    "        MAX_TIME_INCREMENT = hyperparams['time_increment'] + hyperparams['time_increment_span'] #int(max_window_size) or None or TIME_INCREMENT\n",
+    "        max_partners = np.inf\n",
     "    \n",
     "    scores = [] \n",
     "    if record_metrics:\n",
@@ -408,14 +440,19 @@
     "        Win *= hyperparams['input_scaling']\n",
     "\n",
     "        if function_name == \"hadsp\":\n",
-    "            W, (_, _, _) = run_algorithm(W, Win, bias, hyperparams['leaky_rate'], activation_function, pretrain_data, hyperparams['time_increment'], hyperparams['weight_increment'],\n",
-    "                                     hyperparams['target_rate'], hyperparams['rate_spread'], function_name, is_instance=is_instances_classification, use_full_instance=hyperparams['use_full_instance'],\n",
-    "                                     max_increment=MAX_TIME_INCREMENT, max_partners=hyperparams['max_partners'], method=\"pearson\", n_jobs=nb_jobs)\n",
+    "            W, (_, _, _) = run_algorithm(W, Win, bias, hyperparams['leaky_rate'], activation_function, pretrain_data, \n",
+    "                                     hyperparams['weight_increment'], hyperparams['target_rate'], hyperparams['rate_spread'], function_name, \n",
+    "                                     multiple_instances=is_instances_classification, \n",
+    "                                     min_increment = hyperparams['min_increment'], max_increment=hyperparams['max_increment'], use_full_instance=hyperparams['use_full_instance'],\n",
+    "                                     max_partners=max_partners, method=\"pearson\", n_jobs=nb_jobs)\n",
     "        elif function_name == \"desp\":\n",
-    "            W, (_, _, _) = run_algorithm(W, Win, bias, hyperparams['leaky_rate'], activation_function, pretrain_data, hyperparams['time_increment'], hyperparams['weight_increment'],\n",
-    "                                    hyperparams['variance_target'], hyperparams['variance_spread'], function_name, is_instance=is_instances_classification, \n",
-    "                                    use_full_instance = hyperparams['use_full_instance'], max_increment=MAX_TIME_INCREMENT, max_partners=hyperparams['max_partners'], method = \"pearson\", \n",
-    "                                    intrinsic_saturation=hyperparams['intrinsic_saturation'], intrinsic_coef=hyperparams['intrinsic_coef'], n_jobs = nb_jobs)\n",
+    "            W, (_, _, _) = run_algorithm(W, Win, bias, hyperparams['leaky_rate'], activation_function, pretrain_data, \n",
+    "                                         hyperparams['weight_increment'], hyperparams['variance_target'], hyperparams['variance_spread'], function_name, \n",
+    "                                         multiple_instances=is_instances_classification, \n",
+    "                                         min_increment = hyperparams['min_increment'], max_increment=hyperparams['max_increment'], use_full_instance = hyperparams['use_full_instance'], \n",
+    "                                         max_partners=max_partners, method = \"pearson\", \n",
+    "                                         intrinsic_saturation=hyperparams['intrinsic_saturation'], intrinsic_coef=hyperparams['intrinsic_coef'], \n",
+    "                                         n_jobs = nb_jobs)\n",
     "        elif function_name in [\"random_ee\", \"random_ei\", \"ip_correct\", \"anti-oja\", \"anti-oja_fast\", \"ip-anti-oja\",  \"ip-anti-oja_fast\"]:\n",
     "            eigen = sparse.linalg.eigs(W, k=1, which=\"LM\", maxiter=W.shape[0] * 20, tol=0.1, return_eigenvectors=False)\n",
     "            W *= hyperparams['spectral_radius'] / max(abs(eigen))\n",
@@ -840,14 +877,14 @@
     "columns = ['Dataset', 'Function', 'Average Score', 'Standard Deviation', 'Date']\n",
     "variate_type = \"multi\"  # \"multi\" or \"uni\"\n",
     "\n",
-    "for dataset_name in [\"SPEECHCOMMANDS\"]: \n",
+    "for dataset_name in [\"SpokenArabicDigits\"]: \n",
     "    new_results = pd.DataFrame(columns=columns)\n",
-    "    # Can be \"MackeyGlass\", \"Lorenz\", \"Sunspot_daily\", \"Henon\", \"NARMA\", \"CatsDogs\", \"JapaneseVowels\", \"SpokenArabicDigits\", \"FSDD\", \"SPEECHCOMMANDS\"\n",
+    "    # Can be \"MackeyGlass\", \"Lorenz\", \"Sunspot_daily\", \"CatsDogs\", \"JapaneseVowels\", \"SpokenArabicDigits\", \"FSDD\", \"SPEECHCOMMANDS\"\n",
     "    pretrain_data, train_data, test_data, Y_train, Y_test, is_multivariate, is_instances_classification = load_data(dataset_name, data_type, noise_std, visualize=True)\n",
     "    if is_instances_classification:\n",
-    "        file_name = \"outputs/test_results_classification.csv\"\n",
+    "        file_name = \"test_results/test_results_classification.csv\"\n",
     "    else: \n",
-    "        file_name = \"outputs/test_results_prediction.csv\"\n",
+    "        file_name = \"test_results/test_results_prediction.csv\"\n",
     "    print(dataset_name)\n",
     "    # Simulate your data and loop for evaluation\n",
     "\n",
@@ -931,10 +968,10 @@
     "import os\n",
     "import pandas as pd \n",
     "\n",
-    "file_name = \"outputs/test_results_classification.csv\"\n",
+    "file_name = \"test_results/test_results_classification.csv\"\n",
     "\n",
     "if 'file_name' not in locals() and 'file_name' not in globals():\n",
-    "    file_name = \"outputs/test_results_prediction.csv\"  #  test_results_classification.csv or test_results_prediction.csv\n",
+    "    file_name = \"test_results/test_results_prediction.csv\"  #  test_results_classification.csv or test_results_prediction.csv\n",
     "\n",
     "if os.path.exists(file_name):\n",
     "    previous_results = pd.read_csv(file_name)\n",
